# ai-procs-native

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compile.sh  run.sh  test.sh
libtorch/: build-hash  build-version
libtorch/include/ATen/: CUDAType.h  Functions.h  MSNPUType.h  NativeFunctions.h  QuantizedCPUType.h  RegistrationDeclarations.h  TypeDefault.h  XLAType.h
libtorch/include/caffe2/core/: macros.h
libtorch/include/caffe2/proto/: torch.pb.h
src/: ai_procs.hh  aip.hpp  aip_server.cpp  test.cpp
test/: Dockerfile  metadata.json  model.pt
